force-app/main/default/objects/Tv_Serie__c/Tv_Serie__c.object-meta.xml
<CustomObject>
    <label>Tv Serie</label>
    <nameField>
        <label>Tv Serie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tv Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>