force-app/main/default/objects/Tv_Serie__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IF (NOT(ISBLANK( Logo_URL__c )),IMAGE( Logo_URL__c , &apos;Image&apos;, 285, 200),&quot;No Logo Is Captured&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>