force-app/main/default/objects/Tv_Serie__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>Logo for this Tv Serie</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>