force-app/main/default/objects/Tv_Serie__c/validationRules/Tv_Serie_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Tv_Serie_Name_Validation_Rule</fullName>
    <active>true</active>
    <description>Enter the Serie Name, it must contain at least two characters (special characters are not allowed) and should be unique.</description>
    <errorConditionFormula>AND(NOT(REGEX(Name,&quot;[a-zA-Z_0-9]\\s[a-zA-Z_0-9][a-zA-Z_0-9\\s]*&quot;)),
				NOT(REGEX(Name,&quot;[a-zA-Z_0-9]{2,}[a-zA-Z_0-9\\s]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Serial name, it must contain at least two characters (special characters are not allowed).</errorMessage>
</ValidationRule>